<resources>
    <string name="app_name">Nicomendroid</string>
    <string name="please_live_id">Please enter the live broadcast ID (lv ~).</string>
    <string name="live_id">Live ID</string>
    <string name="getComment">Get comment</string>
    <string name="error">Error</string>
    <string name="title_activity_comment_view_main">CommentViewMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="commentList">Comment List</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Loading</string>
    <string name="end">end</string>
    <string name="premium_account">Premium Membership</string>
    <string name="general_account">General Membership</string>
    <string name="management">Management</string>
    <string name="id_activity">Broadcast ID Input</string>
    <string name="gift">Gift History</string>
    <string name="license">License</string>
    <string name="menu_toast">Display toast</string>
    <string name="menu_tts">Use reading (TTS)</string>
    <string name="tts_ok">TTS ready</string>
</resources>
