<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_license"
        android:orderInCategory="100"
        android:title="@string/license"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_toast"
        android:orderInCategory="100"
        android:checkable="true"
        android:title="@string/menu_toast"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_tts"
        android:orderInCategory="100"
        android:checkable="true"
        android:title="@string/menu_tts"
        app:showAsAction="never" />

</menu>
